Bug 1466581, handle sequential focus also in nested shadow DOM, r=mrbkap